--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Make de Matuta</title>
+  <meta http-equiv="refresh" content="0;url=http://www.facebook.com/makedematuta">
+</head>
 <body>
-
-<h1>Em Breve!</h1>
 
 </body>
 </html>
